# stool

./: .gitignore  Cargo.toml  README.md  config.yaml.example  install.sh
src/: main.rs
src/modules/: ssh.rs
src/utils/: interactive.rs
stool-cli/: Cargo.toml
stool-cli/src/: main.rs
stool-core/: Cargo.toml
stool-core/src/: config.rs  error.rs  lib.rs
stool-modules/: Cargo.toml
stool-modules/src/: aws.rs  docker.rs  filesystem.rs  lib.rs  ssh.rs  transfer.rs  update.rs
stool-utils/: Cargo.toml
stool-utils/src/: command.rs  interactive.rs  lib.rs
