[workspace]
members = [
    "stool-cli",
    "stool-core",
    "stool-modules",
    "stool-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["seokjin0414 <sars21@hanmail.net>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dialoguer = "0.12.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
strip = true
panic = "abort"
