[workspace]
members = [
    "stool-cli",
    "stool-core",
    "stool-modules",
    "stool-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["seokjin0414 <sars21@hanmail.net>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.59"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
dialoguer = "0.12.0"
rustyline = "17.0.2"
zeroize = "1.8"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
strip = true
panic = "abort"
