[workspace]
members = [
    "stool-cli",
    "stool-core",
    "stool-modules",
    "stool-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["seokjin0414 <sars21@hanmail.net>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.51", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
clap_complete = { version = "4.5.60", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_yaml = { version = "0.9.33", default-features = false }
dialoguer = { version = "0.12.0", default-features = false, features = ["completion", "password"] }
rustyline = { version = "17.0.2", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
strip = true
panic = "abort"
